# PhantomNode

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: audio_work.py  conversion.py  hamming.py  main.py  server.py
tests_output/: binary_content.txt
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/ui/: button.tsx
